<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="minesellerApplyActivity2">請同意以上協議</string>
    <string name="minesellerApplyActivity1">商家認證</string>
    <string name="minesettingFundPwdActivity2">修改資金密碼</string>
    <string name="minemine_activity_security370">商家申請</string>
    <string name="minesellerApplyActivity4"> 同意凍結%sUSDT作爲商家保證金</string>
    <string name="minesettingFundPwdActivity1">設置資金密碼</string>
    <string name="minesellerApplyActivity3">買賣商戶必須爲平臺認證商戶，並在本頁面點擊“確認申請”按鈕，提交申請，並同意凍結%sUSDT作爲商家保證金。 </string>
    <string name="minemine_activity_seller_apply200">申請成爲商家</string>
    <string name="minemine_setting_fund_pwd150">確認資金密碼</string>
    <string name="minesettingActivity2">退出登錄</string>
    <string name="minemine_activity_person550">等    級:</string>
    <string name="minesettingActivity3">是否確定退出該賬戶？ </string>
    <string name="minesettingActivity1">設置</string>
    <string name="minemine_activity_setting_password80">原登錄密碼</string>
    <string name="minesecurityActivity1">安全中心</string>
    <string name="mineassertActivity">我的資產</string>
    <string name="mineassertActivity1">我的資產(USDT)</string>
    <string name="minemine_activity_security260">谷歌驗證</string>
    <string name="minemine_activity_bind_mobile210">請輸入您的驗證碼</string>
    <string name="minemine_activity_help_center280">隱私條款</string>
    <string name="minemine_activity_help_center281">關於反洗錢</string>
    <string name="minemine_activity_bind_mobile330">提交</string>
    <string name="minesettingActivity4">退出</string>
    <string name="minemine_activity_verify_google80">打開谷歌驗證器，掃描下方二維碼或手動輸入下述祕鑰添加驗證令牌。 祕鑰用戶手機更換或遺失時找回谷歌驗證器，綁定前請務必將下述祕鑰備份保存。 </string>
    <string name="minesecurityActivity23">高級待審覈</string>
    <string name="minesecurityActivity22">高級未認證</string>
    <string name="minesecurityActivity21">初級審覈中</string>
    <string name="minemine_activity_setting_password170">新登錄密碼</string>
    <string name="minesecurityActivity20">初級未認證</string>
    <string name="minesecurityActivity27">已綁定</string>
    <string name="minesecurityActivity26">初級已拒絕</string>
    <string name="minemine_activity_feedback40">請寫下您的寶貴建議</string>
    <string name="minesecurityActivity25">高級已拒絕</string>
    <string name="minesecurityActivity24">高級已認證</string>
    <string name="minesecurityActivity3">您的商家認證正在審覈中，請耐心等待！ </string>
    <string name="minemine_activity_fingerprint60">通過指紋驗證後方可交易_touch</string>
    <string name="minesecurityActivity2">手機號已綁定</string>
    <string name="minesecurityActivity123">郵箱已綁定</string>
    <string name="minesecurityActivity5">解除商家認證</string>
    <string name="minemine_activity_person280">交 易 ID：</string>
    <string name="minesecurityActivity4">您的商家解除正在審覈中，請耐心等待！ </string>
    <string name="minesecurityActivity28">解綁谷歌驗證</string>
    <string name="minesecurityActivity7">解除認證後將不再享有認證商家的權限和服務。 </string>
    <string name="minemine_fragment_mine450">安全中心</string>
    <string name="minesecurityActivity6">在廣告全部下架且沒有未處理的交易糾紛的情況下，會在3個工作日內解除認證。 </string>
    <string name="minesecurityActivity9">請先開啓本機指紋識別功能</string>
    <string name="minesecurityActivity8">該設備不支持指紋</string>
    <string name="minemine_setting_fund_pwd260">手機號碼：</string>
    <string name="minemine_setting_fund_pwd261">郵箱地址：</string>
    <string name="minemine_fragment_mine570">地址管理</string>
    <string name="minemine_activity_setting_password100">請輸入原8-20位數字+字母登錄密碼</string>
    <string name="minemineFragment1">登錄註冊</string>
    <string name="minemineFragment3">複製</string>
    <string name="minemine_activity_seller_apply80">步驟一：提交申請</string>
    <string name="minequestionListActivity1">常見問題</string>
    <string name="minehelpCenterActivity1">幫助中心</string>
    <string name="minemine_activity_security120">手機</string>
    <string name="minemine_activity_bind_mobile230">獲取驗證碼</string>
    <string name="minemine_fragment_mine510">問題反饋</string>
    <string name="minesettingPresenter1">當前已是最新版本</string>
    <string name="minemine_activity_verify_google250">下一步</string>
    <string name="minemine_fragment_mine590">系統</string>
    <string name="minemine_activity_setting_password190">請輸入新8-20位數字+字母組合</string>
    <string name="minemine_fragment_mine470">平臺公告</string>
    <string name="mineassetFragment3">已拒絕</string>
    <string name="minemine_activity_person100">等級</string>
    <string name="mineassetFragment1">審覈中</string>
    <string name="minemine_activity_person460">姓    名:</string>
    <string name="minebindMobileActivity3">綁定手機號</string>
    <string name="minebindMobileActivity4">綁定郵箱</string>
    <string name="minebindMobileActivity1">修改手機號</string>
    <string name="minebindMobileActivity2">修改郵箱</string>
    <string name="minemine_activity_security330">身份認證</string>
    <string name="minebindMobileActivity7">請輸入您的手機號</string>
    <string name="minebindMobileActivity8">請輸入您的郵箱地址</string>
    <string name="minebindMobileActivity5">手機號碼</string>
    <string name="minemine_activity_bind_mobile140">請輸入您的手機號碼</string>
    <string name="minebindMobileActivity6">郵箱地址</string>
    <string name="minepersonActivity3">級</string>
    <string name="minemine_activity_seller_apply120">步驟二：資料審覈</string>
    <string name="minepersonActivity2">普通用戶</string>
    <string name="minepersonActivity1">個人信息</string>
    <string name="minemine_activity_person190">手 機 號：</string>
    <string name="minemine_activity_seller_apply60">如何申請成爲商家？ </string>
    <string name="minemine_setting_fund_pwd190">請再次輸入資金密碼</string>
    <string name="minemine_activity_setting80">當前版本</string>
    <string name="minemine_activity_fingerprint20">通過指紋驗證後方可交易</string>
    <string name="minemine_activity_verify_google230">保存二維碼到手機或複製祕鑰到剪貼板可能會有安全風險，請妥善保存</string>
    <string name="minemine_setting_fund_pwd100">請輸入8-20位字母+數字資金密碼</string>
    <string name="minemine_fragment_mine490">關於我們</string>
    <string name="minemine_fragment_mine370">充幣</string>
    <string name="minemine_fragment_mine250">幣幣賬戶(USDT)≈</string>
    <string name="mineverifyGoogleActivity2">綁定谷歌驗證</string>
    <string name="mineverifyGoogleActivity1">綁定谷歌驗證器</string>
    <string name="minemine_activity_person640">身份證號：</string>
    <string name="minemine_activity_security430">指紋登錄</string>
    <string name="minesecurityActivity12">未設置</string>
    <string name="minemine_activity_seller_apply140">我們平臺會在72小時內進行審覈商家申請資料及匹配以往交易，確認符合商家申請條件，您可以在法幣交易區發佈廣告。 如申請條件未符合，我們將12小時內聯繫您，請保持通訊暢通</string>
    <string name="minemine_activity_setting_password260">確認新登錄密碼</string>
    <string name="minesecurityActivity11">已設置</string>
    <string name="minesecurityActivity10">未綁定</string>
    <string name="minesecurityActivity14">未認證</string>
    <string name="minesecurityActivity13">已認證</string>
    <string name="minesecurityActivity19">獲取狀態錯誤</string>
    <string name="minesecurityActivity18">解除商家審覈中</string>
    <string name="minesecurityActivity17">已解綁</string>
    <string name="minemine_activity_verify_google100">請妥善備份祕鑰以防遺失</string>
    <string name="minemine_activity_person370">國家/地區</string>
    <string name="minemine_activity_security160">登錄密碼</string>
    <string name="minesetLoginPwdActivity1">修改登錄密碼</string>
    <string name="minemine_activity_security200">資金密碼</string>
    <string name="minemine_activity_setting60">語言</string>
    <string name="minemine_activity_bind_mobile280">請輸入資金密碼</string>
    <string name="minemine_fragment_mine390">提幣</string>
    <string name="minemine_activity_feedback60">請留下您的聯繫方式</string>
    <string name="minemine_fragment_mine550">聯繫客服</string>
    <string name="minefeedbackActivity1">問題反饋</string>
    <string name="minemine_fragment_mine399">資產明細</string>
    <string name="mine_security_start">解除</string>
    <string name="mine_contact_us_content1">掃一掃聯繫我們</string>
    <string name="mine_contact_us_content2">聯繫客服</string>
    <string name="mine_feedback_sumbit_success">提交成功</string>
    <string name="minemine_activity_help_center80">交易規則</string>
    <string name="mine_safe_center">安全中心</string>
    <string name="mine_address_guess">地址管理</string>
    <string name="mine_platform_announcement">平臺公告</string>
    <string name="mine_about_us">關於我們</string>
    <string name="mine_question">問題反饋</string>
    <string name="mine_help_center">推廣邀請</string>
    <string name="mine_contact_guess">聯繫客服</string>
    <string name="mine_my_asset">資產列表</string>
    <string name="mine_assert_conver">資產兌換</string>
    <string name="mine_assert_conver_new">資產兌換</string>
    <string name="mine_assert_conver_all">| 全部</string>
    <string name="mine_conver_hint">請輸入兌換數量</string>
    <string name="mine_total_assert">總資產</string>
    <string name="mine_tranfer">劃轉</string>
    <string name="mine_bibi">幣幣</string>
    <string name="mine_heyue">合約</string>
    <string name="mine_fabi">法幣</string>
    <string name="mine_availble">可用</string>
    <string name="mine_frozen">凍結</string>
    <string name="mine_Cny">摺合(USD)</string>
    <string name="mine_from">從</string>
    <string name="mine_to">到</string>
    <string name="mine_BiBi_account">幣幣賬戶</string>
    <string name="mine_heyue_account">合約賬戶</string>
    <string name="mine_fabi_account">法幣賬戶</string>
    <string name="mine_currency">幣種</string>
    <string name="mine_transfer_num">劃轉數量</string>
    <string name="mine_hint">請輸入劃轉數量</string>
    <string name="mine_Usdt">USDT | 全部</string>
    <string name="mine_content">只有將資產劃轉到對應賬戶纔可以進行交易,賬戶間的劃轉不收取手續費.</string>
    <string name="mine_assert_record">財務記錄</string>
    <string name="mine_now_price">當前報價:</string>
    <string name="mine_conver_num">兌換數量</string>
    <string name="mine_conver_show">輸入的數量不能大於可用數量! </string>
    <string name="mine_conver_record">資產兌換記錄</string>
    <string name="mine_conver">兌換</string>
    <string name="mine_conver_content">只有將資產劃轉到對應賬戶纔可以進行交易,賬戶間的劃轉不收取手續費.</string>
    <string name="mine_assert_password">資金密碼</string>
    <string name="mine_assert_input_password">輸入資金密碼</string>
    <string name="mine_cancel">取消</string>
    <string name="mine_true">確定</string>
    <string name="mine_zhitui">今日新增</string>
    <string name="mine_tuandui_num">團隊人數</string>
    <string name="mine_my_tuiguang">我要推廣</string>
    <string name="mine_my_guess">我的客戶</string>
    <string name="mine_yaoqingma">邀請碼:</string>
    <string name="mine_copy">複製邀請碼</string>
    <string name="mine_register_lianjie">註冊鏈接:</string>
    <string name="mine_zhanghao">賬號</string>
    <string name="mine_night">夜間模式</string>
    <string name="mine_register">註冊時間</string>
    <string name="mine_assert_record_item">已完成</string>
    <string name="mine_assert_record_item_deal">處理中</string>
    <string name="mine_assert_record_item_fail">失敗</string>
    <string name="mine_contact_us">暫未開放</string>
    <string name="mine_chongbi">充幣</string>
    <string name="mine_tibi">提幣</string>
    <string name="mine_setting">設置</string>
    <string name="mineUsdt_zong">總額</string>
    <string name="mine_available">可用</string>
    <string name="mine_shiming">實名認證</string>
    <string name="mine_shiming_text">已經實名</string>
    <string name="mine_jiebang">解綁成功</string>
    <string name="mine_name">姓名</string>
    <string name="mine_weishiming">未實名</string>
    <string name="mine_email">郵箱</string>
    <string name="mine_weibangding">未綁定</string>
    <string name="mine_sell_one_key">一鍵賣出</string>
    <string name="mine_bibi_zhanghu">幣幣賬戶</string>
    <string name="mine_fabi_zhanghu">法幣賬戶</string>
    <string name="mine_heyue_zhanghu">合約賬戶</string>
    <string name="mine_zong">總資產摺合(USDT)</string>
    <string name="mine_cong">充幣</string>
    <string name="mine_ti">提幣</string>
    <string name="mine_hua">劃轉</string>
    <string name="mine_select">選擇計價貨幣</string>
    <string name="mine_yincang">隱藏小額資產</string>
    <string name="mine_solo">搜索</string>
    <string name="mine_solo1">搜索</string>
    <string name="mine_xiangtong">相同賬戶不能轉換! </string>
    <string name="mine_num_shu">请输入划转数量</string>
    <string name="mine_keyong">可用</string>
    <string name="mine_all">\" |全部\"</string>
</resources>
