<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mineBgDeep"
    android:orientation="vertical"
    tools:context=".ui.activity.HelpCenterActivity">

    <include layout="@layout/lib_include_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:background="@color/mineBg"
        android:orientation="vertical"
        android:paddingStart="30pt"
        android:paddingEnd="30pt">

        <com.allen.library.SuperTextView
            android:id="@+id/stvQuestion"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            app:sDividerLineColor="@color/mineDivider"
            app:sDividerLineHeight="1pt"
            app:sLeftTextColor="@color/mineTextContent"
            app:sLeftTextSize="30pt"
            app:sLeftTextString="@string/minequestionListActivity1"
            app:sRightTvDrawableRight="@mipmap/mine_icon_my_arrow_right_new" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvRule"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            app:sDividerLineColor="@color/mineDivider"
            app:sDividerLineHeight="1pt"
            app:sLeftTextColor="@color/mineTextContent"
            app:sLeftTextSize="30pt"
            app:sLeftTextString="@string/minemine_activity_help_center80"
            app:sRightTvDrawableRight="@mipmap/mine_icon_my_arrow_right_new" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvAgreement"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            app:sDividerLineColor="@color/mineDivider"
            app:sDividerLineHeight="1pt"
            app:sLeftTextColor="@color/mineTextContent"
            app:sLeftTextSize="30pt"
            app:sLeftTextString="@string/minemine_activity_help_center280"
            app:sRightTvDrawableRight="@mipmap/mine_icon_my_arrow_right_new" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvAntiMoney"
            android:layout_width="match_parent"
            android:layout_height="100pt"
            app:sDividerLineColor="@color/mineDivider"
            app:sDividerLineHeight="0pt"
            app:sLeftTextColor="@color/mineTextContent"
            app:sLeftTextSize="30pt"
            app:sLeftTextString="@string/minemine_activity_help_center281"
            app:sRightTvDrawableRight="@mipmap/mine_icon_my_arrow_right_new" />
    </LinearLayout>
</LinearLayout>
