<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mineBg"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:id="@+id/ccBack"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/lib_icon_back"
            android:tint="@color/libTextContent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/libTextContent"
            android:text="@string/minesettingActivity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:background="@color/lib_bg"
        android:orientation="vertical"
        android:paddingStart="16pt"
        android:paddingEnd="16pt">

        <com.allen.library.SuperTextView
            android:id="@+id/menu_language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/lib_bg"
            android:visibility="visible"
            app:sBackgroundDrawableRes="@color/libBg"
            app:sDividerLineColor="@color/libDivider"
            app:sLeftTextColor="@color/libTextContent"
            app:sLeftTextString="@string/minemine_activity_setting60"
            app:sRightTextColor="@color/libApp"
            app:sRightTvDrawableRight="@mipmap/mine_icon_arrow_right" />

        <com.allen.library.SuperTextView
            android:id="@+id/menu_version"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/lib_bg"
            app:sBackgroundDrawableRes="@color/libBg"
            app:sDividerLineColor="@color/libDivider"
            app:sLeftTextColor="@color/libTextContent"
            app:sLeftTextString="@string/minemine_activity_setting80"
            app:sRightTextColor="@color/libTextHint"
            app:sRightTvDrawableRight="@mipmap/mine_icon_arrow_right" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:visibility="visible"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/mine_night"
        />
    <Switch
        android:id="@+id/switchBtn"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>
</LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logout_btn"
        style="@style/libButtonStyle"
        android:layout_marginLeft="50pt"
        android:layout_marginTop="100pt"
        android:layout_marginRight="50pt"
        android:text="@string/minesettingActivity2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1" />
</LinearLayout>
